erste Felder eingefügt

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,23 @@
 		<script language="javascript" type="text/javascript" src="main.js"></script>
 		<link rel="stylesheet" type="text/css" href="look.css">
 	</head>
-	<body >	
-		
-		
-				
+	<body >
+		<div id="container">
+			<h1 id="header">Lohnabrechnung</h1>
+
+			Bruttogehalt: <span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			Verm&ouml;gensWirksameLeistungen(Gesamt) <span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			Verm&ouml;gensWirksameLeistungen(ArbeitGeber-Anteil) <span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			Verm&ouml;gensWirksameLeistungen(ArbeitNehmer-Anteil) <span id="eingabe"><input type="text" ></input></span>
+
+
+			
+		</div>	
 	</body>
 </html>
