Layout fertig; Javascript fehlt nur noch

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,53 @@
 		<div id="container">
 			<h1 id="header">Lohnabrechnung</h1>
 
-			Bruttogehalt: <span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Bruttogehalt: </span><span id="eingabe"><input type="text" ></input></span>
 			<br>
 			<br>
-			Verm&ouml;gensWirksameLeistungen(Gesamt) <span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Verm&ouml;gensWirksameLeistungen(Gesamt) </span><span id="eingabe"><input type="text" ></input></span>
 			<br>
 			<br>
-			Verm&ouml;gensWirksameLeistungen(ArbeitGeber-Anteil) <span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Verm&ouml;gensWirksameLeistungen(ArbeitGeber-Anteil) </span><span id="eingabe"><input type="text" ></input></span>
 			<br>
 			<br>
-			Verm&ouml;gensWirksameLeistungen(ArbeitNehmer-Anteil) <span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Verm&ouml;gensWirksameLeistungen(ArbeitNehmer-Anteil) </span><span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<span id="label"><h3>Sozialversicherungen</h3></span>
+			<span id="label">Pflege-Versicherung</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			<span id="label"> Renten-Versicherung</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			<span id="label"> Kranken-Versicherung</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			<span id="label"> Arbeitslosen-Versicherung</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<span id="label"><h3>Sonstiges</h3></span>
+			<span id="label"> Lohnsteuer</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			<span id="label"> Kirchensteuer</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<br>
+			<br>
+			<span id="label"> Solidarit&auml;tszuschlag</span>
+			<span id="eingabe"><input type="text" ></input></span>
+			<button type="button" id="btnBerechnen" onclick="berechnen()">berechnen</button>
+			<br>
+			<br>
+			<br>
+			<span id="labelNetto" ><b>NETTO</b></span>
+			<span id="netto">9999</span>
+			<p id="satz">hallo</p>
+
+
 
 
 			
