Das Formular etwas geändert

--- a/src/index.html
+++ b/src/index.html
@@ -8,49 +8,62 @@
 		<div id="container">
 			<h1 id="header">Lohnabrechnung</h1>
 
-			<span id="label">Bruttogehalt: </span><span id="eingabe"><input type="text" ></input></span>
+			
+			<span id="label"><h3>Verm&ouml;genswirksame Leistugnen</h3></span>
+			<span id="label">Verm&ouml;gensWirksameLeistungen(Gesamt) </span><span class = "eingabe"><input type="text" value="0"></input></span>
 			<br>
 			<br>
-			<span id="label">Verm&ouml;gensWirksameLeistungen(Gesamt) </span><span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Verm&ouml;gensWirksameLeistungen(ArbeitGeber-Anteil) </span><span class = "eingabe"><input type="text" value="0"></input></span>
 			<br>
 			<br>
-			<span id="label">Verm&ouml;gensWirksameLeistungen(ArbeitGeber-Anteil) </span><span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Verm&ouml;gensWirksameLeistungen(ArbeitNehmer-Anteil) </span><span class = "eingabe"><input type="text" value="0"></input></span>
+			<br>
+			<span id="label"><h3>Bruttogehalt</h3> </span>
+			<span id="label">Sozialversicherungspflichtiges Bruttogehalt</span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>			
 			<br>
 			<br>
-			<span id="label">Verm&ouml;gensWirksameLeistungen(ArbeitNehmer-Anteil) </span><span id="eingabe"><input type="text" ></input></span>
+			<span id="label">Steuerpflichtiges Bruttogehalt</span>
+			<span class = "eingabe"><input type="text" value="0" ></input></span>
+			<br>
+			<br>
+			<h3>
+			<span id="label">Lohnsteuer</span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>
+			</h3>
 			<br>
 			<span id="label"><h3>Sozialversicherungen</h3></span>
 			<span id="label">Pflege-Versicherung</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe" ><input type="text" value="0"></input></span>
 			<br>
 			<br>
 			<span id="label"> Renten-Versicherung</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe" id="eingabeRV"><input type="text" value="0"></input></span>
 			<br>
 			<br>
 			<span id="label"> Kranken-Versicherung</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>
 			<br>
 			<br>
 			<span id="label"> Arbeitslosen-Versicherung</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>
 			<br>
 			<span id="label"><h3>Sonstiges</h3></span>
 			<span id="label"> Lohnsteuer</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>
 			<br>
 			<br>
 			<span id="label"> Kirchensteuer</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>
 			<br>
 			<br>
 			<span id="label"> Solidarit&auml;tszuschlag</span>
-			<span id="eingabe"><input type="text" ></input></span>
+			<span class = "eingabe"><input type="text" value="0"></input></span>
 			<button type="button" id="btnBerechnen" onclick="berechnen()">berechnen</button>
 			<br>
 			<br>
 			<br>
-			<span id="labelNetto" ><b>NETTO</b></span>
+			<div id="labelNetto" ><b>NETTO</b></div>
 			<span id="netto">9999</span>
 			<p id="satz">hallo</p>
 
